[package]
name = "rustynews"
version = "0.1.0"
authors = ["Kevin Martin Jose <youcancallmekevin@gmail.com>"]
edition = "2018"
description = "A command line hacker news client"
license = "mit"
[dependencies]
clap = "2.26.0"
reqwest = "0.9.18"
serde = "1.0.92"
serde_json = "1.0.39"
indicatif = "0.11.0"
structopt = "0.2.17"